--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
       <ul>
         <li>
           <input type="checkbox" id="item1">
-          <label for="item1">A lot of pickles</label>
+          <label for="item1" data-info="(for the next lessons about CSS)">A lot of pickles</label>
         </li>
         <li>
           <input type="checkbox" id="item2">
-          <label for="item2">10 apples</label>
+          <label for="item2" data-info="(for more CSS manipulations)">10 apples</label>
         </li>
         <li>
           <input type="checkbox" id="item3">
-          <label for="item3">20 oranges</label>
+          <label for="item3" data-info="(because they are awesome)">20 oranges</label>
         </li>
         <li>
           <input type="checkbox" id="item4">
-          <label for="item4">13 plates</label>
+          <label for="item4" data-info="(hm... they always dissapear)">13 plates</label>
         </li>
         <li>
           <input type="checkbox" id="item5">
@@ -40,7 +40,7 @@
         </li>
         <li>
           <input type="checkbox" id="item6">
-          <label for="item6">1 bottle of Sake </label>
+          <label for="item6" data-info="(hm... they always dissapear)">1 bottle of Sake </label>
         </li>
       </ul>
 
